Updated for current DC Ecology material

--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,13 @@
 name: cic-workshop
-
 channels:
-  # Conda forge - gives us lots of community-built Python packages, see https://conda-forge.org/ for details
-  - conda-forge  
-  # R packages - uncoment this one if you want to use R for your work. R packages in conda are generally called 'r-$packagename'. Note that this will massively slow down the dependency resolver so only do it if you actually need it.
-  # - r
-
+  - conda-forge
+  - defaults
 dependencies:
-  - python >= 3.7
-  - numpy
-  - pandas
-  - matplotlib
-  - seaborn
-  - patsy
+  - python=3.8
   - jupyter
   - ipykernel
+  - pandas
+  - numpy
+  - matplotlib
+  - plotnine
   - pip
-  # - pip:
-  #   - pip-installable dependencies go here. Prefer Conda ones if possible...
