--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
-name: cic-workshop
+name: cids-workshop
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
+  - python=3.11
   - jupyter
   - ipykernel
   - pandas>=2
